welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:2: error: Int(-2147483648) does not take parameters
  var n=Integer.MIN_VALUE();
                         ^max2Value:3: error: Int(-2147483648) does not take parameters
  var l=Integer.MIN_VALUE();
                         ^